# pyrogramTaskManageBot

./: .env.docker.example  .env.example  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  settings.py
app/: __main__.py  bot.py  database.py  filters.py  fsm.py  models.py  router_dispatcher.py
app/handlers/: __init__.py  registration.py  task.py  tasks.py
app/handlers/task/: base_task_handler.py  task_creation_handler.py  task_deletion_handler.py  task_editing_handler.py  task_handler.py  task_listing_handler.py  task_status_handler.py
app/handlers/user/: base_user_handler.py  registration_process_handler.py  start_handler.py  user_deletion_handler.py  user_handler.py
app/keyboards/: __init__.py  menu.py  task.py
app/plugins/: basic.py  start.py
app/states/: __init__.py  fsm.py  states.py
bot_src/: __main__.py  bot.py  database.py  filters.py  router_dispatcher.py
bot_src/handlers/: __init__.py
bot_src/handlers/task/: base_task_handler.py  task_creation_handler.py  task_deletion_handler.py  task_editing_handler.py  task_handler.py  task_listing_handler.py  task_status_handler.py
bot_src/handlers/user/: base_user_handler.py  registration_process_handler.py  start_handler.py  user_deletion_handler.py  user_handler.py
bot_src/keyboards/: menu.py  task.py
bot_src/states/: __init__.py  states.py
deployment_configs/: check_and_run.sh  gunicorn_conf.py  taskbot.conf
